# ecp-minicursos

./: .gitignore  README.md  _quarto.yml  a1.qmd  comp-dist-resumo.qmd  comp-dist.qmd  cuda-resumo.qmd  cuda.qmd  freertos-resumo.qmd  freertos.qmd  ia-resumo.qmd  ia.qmd  index.qmd  intro.qmd  llvm-resumo.qmd  llvm.qmd  openmp-resumo.qmd  openmp.qmd  preface.qmd  pthreads-resumo.qmd  pthreads.qmd  pytorch-resumo.qmd  pytorch.qmd  quantica-resumo.qmd  quantica.qmd  references.bib  simd-resumo.qmd  simd.qmd  summary.qmd  sup-acel-lpms-resumo.qmd  sup-acel-lpms.qmd
book/: a1-starting.html  a1.html  (+20 more)
src/freertos/project/components/web_server/: CMakeLists.txt  analog_input.c  digital_input.c  digital_output.c  events.c  sensor.c  web_server.c
src/freertos/project/components/web_server/frontend/: package.json  tsconfig.json  webpack.config.js
src/freertos/project/components/web_server/frontend/server/: mock-api.ts
src/freertos/project/components/web_server/frontend/server/api/: digital-input.ts  digital-output.ts  events.ts
src/freertos/project/components/web_server/frontend/src/: globals.scss  index.html  index.ts  theme.scss
src/freertos/project/components/web_server/frontend/src/components/analog-input/: analog-input.scss  analog-input.ts
src/freertos/project/components/web_server/frontend/src/components/dashboard/: dashboard-content.ts  dashboard-menu.ts  dashboard.scss  dashboard.ts
src/freertos/project/components/web_server/frontend/src/utils/: device-events.ts
src/freertos/project/components/web_server/include/: web_server.h  web_server_internals.h
(+97 files in other folders)
